# dynantic

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TESTING.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  sitemap.xml  skill.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release-please.yml
comparison/: index.html
docs/: comparison.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: auto-uuid.md  batch.md  conditions.md  crud.md  models.md  pagination.md  polymorphism.md  querying.md  transactions.md  ttl.md  updates.md
docs/integration/: configuration.md  fastapi.md  localstack.md
docs/reference/: batch.md  client.md  conditions.md  exceptions.md  fields.md  model.md  pagination.md  query.md  scan.md  transactions.md  updates.md
dynantic/: __init__.py  _logging.py  base.py  batch.py  builder.py  client.py  conditions.py  config.py  exceptions.py  fields.py  metaclass.py  model.py  pagination.py  query.py  scan.py  serializer.py  transactions.py  updates.py
examples/: README.md  auto_uuid.py  batch_operations.py  filter_examples.py  gsi_examples.py  model.py  single_table_design.py  transactions.py  ttl_example.py
examples/fastapi_integration/: main.py  requirements.txt
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/auto-uuid/: index.html
guide/batch/: index.html
guide/conditions/: index.html
guide/crud/: index.html
guide/models/: index.html
guide/pagination/: index.html
guide/polymorphism/: index.html
guide/querying/: index.html
guide/transactions/: index.html
guide/ttl/: index.html
guide/updates/: index.html
integration/configuration/: index.html
integration/fastapi/: index.html
integration/localstack/: index.html
reference/batch/: index.html
reference/client/: index.html
reference/conditions/: index.html
reference/exceptions/: index.html
reference/fields/: index.html
reference/model/: index.html
reference/pagination/: index.html
reference/query/: index.html
reference/scan/: index.html
reference/transactions/: index.html
reference/updates/: index.html
search/: search_index.json
skill/: SKILL.md
skill/references/: advanced-patterns.md  api-quick-ref.md
tests/: __init__.py  conftest.py
(+35 files in other folders)
