[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynantic"
version = "0.2.0"
description = "Pydantic ODM for DynamoDB based on Boto3"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Simone Paolo Petta", email = "pettasimonepaolo@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pydantic",
    "Topic :: Database",
]

dependencies = [
    "pydantic>=2.6.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "boto3-stubs[essential]",
]

# --- Configuration Tooling ---

[tool.hatch.build.targets.wheel]
packages = ["dynantic"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "boto3-stubs[essential]",
]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests",           # Root tests package
    "tests.*",         # All subpackages and submodules (tests.conftest, tests.unit.*, etc.)
    "conftest",        # Standalone conftest when run directly
]
disallow_untyped_defs = false
check_untyped_defs = false  # Don't type-check untyped functions
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "B",  # flake8-bugbear (common bugs)
    "UP", # pyupgrade (modern python syntax)
]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"